--- a/index.html
+++ b/index.html
@@ -58,7 +58,13 @@
         <div class="alinhamento-box box1">Div 1</div>
         <div class="alinhamento-box box2">Div 2</div>
         <div class="alinhamento-box box3">Div 3</div>
-        <div style="clear: both;"></div> <!-- Limpa o float -->
+        <div style="clear: both; margin-bottom: 15px;"></div>
+        <div class="alinhamento-box box4">Div 4</div>
+        <div class="alinhamento-box box5">Div 5</div>
+        <div class="alinhamento-box box6">Div 6</div>
+        <div style="clear: both;"></div>
+        
+        <!-- Limpa o float -->
     </section>
 
 
